# cheri-compressed-cap

./: README.md  cheri_compressed_cap_128.h  cheri_compressed_cap_128m.h  cheri_compressed_cap_128r.h  cheri_compressed_cap_64r.h  cheri_compressed_cap_common.h  cheri_compressed_cap_lib.c  cheri_compressed_cap_macros.h  cheri_compressed_cap_riscv_common.h  cheri_compressed_cap_v9_common.h
test/: fuzz-decompress.cpp  simple_test_common.cpp
test/rust-cheri-compressed-cap/: Cargo.toml  build.rs
test/rust-cheri-compressed-cap/.cargo/: config.toml
test/rust-cheri-compressed-cap/src/: c_funcs.rs  caps.rs  cc128.rs  cc64.rs  ffi_num.rs  lib.rs  wrappers.rs
